test-cases/negative/test_152_missing_comma_in_list.lay
# negative test: list without proper separators
# expected: parser should reject this

the variable list of type List of Number is 6


